--- a/level24.html
+++ b/level24.html
@@ -76,7 +76,7 @@
          <section>
           <h2>💋 mmmmmmuah</h2>
           <img src="4.jpeg" alt="muah" style="max-width: 100%; border-radius: 10px;" />   
-         <p>tüm gün öpücümle gecmisti canim kocam(habersiz)</p>
+         <p>tüm gün öpücüümle gezmisti canim kocam(habersiz)</p>
       </section>
 
         <section>
