--- a/level24.html
+++ b/level24.html
@@ -250,9 +250,9 @@
 
 
       <section>
-  <h2>⋆.˚✮🎧✮˚.⋆ Tıkla ⋆.˚✮🎧✮˚.⋆</h2>
+  
   <p>
-    <a href="https://open.spotify.com/playlist/5sx52ClwY7vvKR3yLr7fCN" target="_blank" style="color: #1DB954; text-decoration: none; font-weight: bold;">
+    <a href="https://open.spotify.com/playlist/5sx52ClwY7vvKR3yLr7fCN" target="_blank" style="color: #FFCBDB; text-decoration: none; font-weight: bold;">
      ⋆.˚✮🎧✮˚.⋆ Tıkla ⋆.˚✮🎧✮˚.⋆
     </a>
   </p>
